umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_db.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Db#n#u3"] :bonds []} :success true}
  :counts {:output {:atoms ["Db#n2#u"] :bonds []} :success true}}
