umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_dy.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Dy#n4#u4"] :bonds [] :charge 0 :spin "#u4#s5"}
    :success true}
  :counts {:output {:atoms ["Dy#n6"] :bonds [] :charge 0 :spin "#u0#s1"} :success true}}
