umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_er.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Er#n6#u2"] :bonds []} :success true}
  :counts {:output {:atoms ["Er#n7"] :bonds []} :success true}}
