umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_fr.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Fr#u"] :bonds [] :charge 0 :spin "#u1 #s2"}} :counts {:success true :output {:atoms ["Fr#u"] :bonds [] :charge 0 :spin "#u1 #s2"}}}
