umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_gd.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Gd#n#u8"] :bonds [] :charge 0 :spin "#u8 #s9"}
    :success true}
  :counts {:output {:atoms ["Gd#n5"] :bonds [] :charge 0 :spin "#u0 #s1"} :success true}}
